# functional-expert

./: AGENTS.md  README.md  config.json  graph.py  pyproject.toml  server.py
.github/: copilot-instructions.md  mcp.json
.github/agents/: workflow-orchestrator.agent.md
.github/config/: README  mcp.json.template
.github/skills/context7/: .env.example  SKILL.md
.github/skills/context7/scripts/: context7.py
.github/skills/documentation-parser/: SKILL.md
.github/skills/markdown-converter/: SKILL.md
.github/skills/technical-expert/: SKILL.md
services/: git_service.py  vector_store.py
tests/: test_git_service.py  test_vector_store.py
